--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.inputsystem": "1.3.0",
     "com.unity.mathematics": "1.2.5",
     "com.unity.polybrush": "1.0.2",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "4.5.2",
     "com.unity.recorder": "2.5.7",
     "com.unity.test-framework": "1.1.31",
